[tool.poetry]
name = "holbertonschool-hbnb"
version = "0.1.0"
description = ""
authors = ["AliiMustafa <aliimustafazada.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-restx = "^1.3.0"
app = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
